<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20px"
    android:layout_marginTop="20px"
    android:layout_marginRight="20px"
    android:layout_marginBottom="20px"
    android:background="#FFE5E9F3"
    android:orientation="horizontal"
    android:weightSum="2"
    tools:context=".Activities.ViewActivity">

    <LinearLayout
        android:id="@+id/View_More"
        android:layout_width="201dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="15sp">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/View_More"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/naam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:id="@+id/pata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Address"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:id="@+id/mobail_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="15sp">

        </TextView>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="View More" />


    </LinearLayout>


</LinearLayout>