<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".Activities.ViewActivityEntries">


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="379dp"
        android:layout_height="71dp"
        android:layout_marginLeft="5px"
        android:layout_marginTop="20px"
        android:layout_marginRight="5px"
        android:background="#E5E9F3"
        android:baselineAligned="false"
        android:clickable="false"
        android:dividerPadding="@dimen/cardview_default_elevation"
        android:fadingEdge="vertical"
        android:focusable="auto"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/cardview_default_radius"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".Activities.ViewActivity">

        <LinearLayout
            android:id="@+id/Liner_Layout"
            android:layout_width="166dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:textSize="15sp">

            </TextView>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="15sp">

            </TextView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/Liner_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/showadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/showname"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp">

            </TextView>

            <TextView
                android:id="@+id/shownum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp">

            </TextView>


        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myRecycler2"
        android:layout_width="407dp"
        android:layout_height="496dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>