<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UpdateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:context=".updateRecord"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="177dp"
            android:layout_marginRight="177dp"
            android:layout_marginBottom="16dp"
            android:text="@string/no_of_sacks"
            app:layout_constraintBottom_toTopOf="@+id/sacksText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sacksText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="no of sacks"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/PotatoTypeText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="197dp"
            android:layout_marginRight="197dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Type_of_potato"
            app:layout_constraintBottom_toTopOf="@+id/PotatoTypeText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sacksText" />

        <EditText
            android:id="@+id/PotatoTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="type of Potato"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/IDbyclientText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sacksText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="197dp"
            android:layout_marginRight="197dp"
            android:layout_marginBottom="16dp"
            android:text="@string/client_id"
            app:layout_constraintBottom_toTopOf="@+id/IDbyclientText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PotatoTypeText"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/IDbyclientText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="ID by client"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/IDbystoreText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PotatoTypeText" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="213dp"
            android:layout_marginRight="213dp"
            android:layout_marginBottom="16dp"
            android:text="@string/store_id"
            app:layout_constraintBottom_toTopOf="@+id/IDbystoreText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IDbyclientText" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Rack_no"
            app:layout_constraintBottom_toTopOf="@+id/RacknoText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IDbystoreText" />

        <EditText
            android:id="@+id/IDbystoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="ID by store"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/RacknoText"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IDbyclientText" />

        <EditText
            android:id="@+id/RacknoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="Rack No"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IDbystoreText" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="192dp"
            android:layout_marginRight="192dp"
            android:layout_marginBottom="16dp"
            android:text="Position in rack:"
            app:layout_constraintBottom_toTopOf="@+id/pos"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RacknoText" />

        <RadioGroup
            android:id="@+id/pos"
            android:layout_width="69dp"
            android:layout_height="89dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="196dp"
            android:layout_marginRight="196dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/front"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Front"
                tools:layout_conversion_absoluteHeight="32dp"
                tools:layout_conversion_absoluteWidth="91dp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="460dp" />

            <RadioButton
                android:id="@+id/mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mid"
                tools:layout_conversion_absoluteHeight="31dp"
                tools:layout_conversion_absoluteWidth="91dp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="492dp" />

            <RadioButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                tools:layout_conversion_absoluteHeight="34dp"
                tools:layout_conversion_absoluteWidth="91dp"
                tools:layout_editor_absoluteX="45dp"
                tools:layout_editor_absoluteY="523dp" />

        </RadioGroup>


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="289dp"
            android:layout_marginRight="289dp"
            android:layout_marginBottom="16dp"
            android:text="Select Room No:"
            app:layout_constraintBottom_toTopOf="@+id/room"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pos" />

        <Spinner
            android:id="@+id/room"
            android:layout_width="94dp"
            android:layout_height="37dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="301dp"
            android:layout_marginRight="301dp"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@+id/Tareekhpetareekh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <DatePicker
            android:id="@+id/Tareekhpetareekh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="147dp"
            android:layout_marginRight="147dp"
            android:layout_marginBottom="32dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintBottom_toTopOf="@+id/recupdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/room" />

        <Button
            android:id="@+id/recupdate"
            android:layout_width="161dp"
            android:layout_height="42dp"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="161dp"
            android:layout_marginRight="161dp"
            android:layout_marginBottom="32dp"
            android:onClick="add"
            android:text="Update Record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Tareekhpetareekh"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="99dp"
            android:layout_height="574dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.99"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sack" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>